[package]
name = "rproc"
version = "0.1.0"
authors = ["robidev <robin.dev@gmail.com>"]
edition = "2018"

[dependencies]
minifb = "0.10"
rand = "0.3.14"
time = "0.1.34"
byteorder = "1.2.2"
enum_primitive = "0.1"
num = "0.1"
ncurses = { version = "5.99.0", features = ["menu"] } #"5.99.0"


[target.'cfg(not(target_os = "redox"))'.dependencies]
sdl2 = "0.25.0"
